--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "tgal",
   "version": "1.0.0",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "astro": "astro",
@@ -10,16 +11,34 @@
     "preview": "astro preview",
     "start": "astro dev"
   },
-  "license": "MIT",
   "dependencies": {
     "@astrojs/image": "^0.8.1",
     "@astrojs/node": "^1.1.0",
+    "@astrojs/react": "^1.1.4",
     "@astrojs/tailwind": "^2.0.2",
     "@astrojs/vercel": "^2.1.0",
     "astro": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
-    "@squoosh/cli": "^0.7.2"
+    "@hela/cli": "^5.0.0",
+    "@hela/preset-tunnckocore": "^5.0.0",
+    "@tunnckocore/prettier-config": "^3.0.0",
+    "prettier": "^2.7.1"
+  },
+  "prettier": "@tunnckocore/prettier-config",
+  "eslintConfig": {
+    "extends": [
+      "xaxa"
+    ],
+    "rules": {
+      "import/no-unresolved": "off",
+      "promise/prefer-await-to-then": "off",
+      "node/no-unsupported-features/es-builtins": "off",
+      "node/no-unsupported-features/node-builtins": "off"
+    }
   }
 }
